// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handlers Connection checker 1`] = `
Object {
  "dialogAction": Object {
    "fulfillmentState": "Fulfilled",
    "message": Object {
      "content": "juan.carlos@wizeline.com - OK
",
      "contentType": "PlainText",
    },
    "type": "Close",
  },
  "sessionAttributes": Object {},
}
`;

exports[`Handlers Retrieve availability 1`] = `
Object {
  "dialogAction": Object {
    "fulfillmentState": "Fulfilled",
    "message": Object {
      "content": "Availability for Friday May 25, 2018:

*10:00 to 12:00* - Juan Carlos

*14:00 to 15:00* - Juan Carlos
 - Event duration is less than 90 mins

",
      "contentType": "PlainText",
    },
    "type": "Close",
  },
  "sessionAttributes": Object {},
}
`;
